Fixed text overflowing on post problem

--- a/moogloof/static/post.css
+++ b/moogloof/static/post.css
@@ -1,3 +1,4 @@
 .content {
-	white-space: pre;
+	white-space: pre-wrap;
+	word-wrap: break-word;
 }
